# lnurl-spark

./: .env.example  Cargo.toml  diesel.toml
migrations/2025-08-30-195737_baseline/: down.sql  up.sql
src/: config.rs  main.rs  routes.rs
src/models/: invoice.rs  mod.rs  schema.rs  user.rs  zap.rs
